fixed overflow issue in inventory item

--- a/client/src/styles/app.css
+++ b/client/src/styles/app.css
@@ -816,10 +816,11 @@ a {
   top: 7.85%;
   bottom: 4.13%;
   background-color: white;
-  margin: 6.5rem 1rem 0;
+  margin: 6.5rem 0 0;
   border-radius: 4px;
   -webkit-box-shadow: 0px 2px 5px rgba(19, 24, 44, 0.1);
           box-shadow: 0px 2px 5px rgba(19, 24, 44, 0.1);
+  width: 343px;
 }
 
 .inv__heading {
@@ -847,11 +848,14 @@ a {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding: 1rem 1.5rem;
+}
+
+.inv__inv-item {
+  width: 8.75rem;
+  margin-bottom: 1.25rem;
 }
 
 .inv__inv-item-header, .inv__inv-status-header, .inv__inv-warehouse-header, .inv__inv-category-header, .inv__inv-qty-header {
-  margin-top: 1rem;
   font-family: Titillium Web;
   font-style: normal;
   font-weight: 600;
@@ -882,6 +886,22 @@ a {
 .inv__inv-item-icon {
   width: 1rem;
   height: 1rem;
+}
+
+.inv__inv-status-info {
+  font-family: Titillium Web;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 0.7rem;
+  line-height: 1rem;
+  text-transform: uppercase;
+  color: #158463;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  background: rgba(21, 132, 99, 0.07);
+  padding: 0.25rem 0.5rem;
+  border-radius: 20px;
 }
 
 .inv__item-icons-container {
